tweaks for Windows
git-svn-id: https://svn.r-project.org/R/trunk@52178 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -184,7 +184,7 @@ UTILITIES
 	existing INDEX file.
 
     o	There is an R-based version of R CMD check, R CMD ncheck.
-	[In progess, currently Unix-only.]
+	[In progress.]
 
 
 C-LEVEL FACILITIES
