allow lwd less than 1 on PDF device
git-svn-id: https://svn.r-project.org/R/trunk@52180 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -250,6 +250,8 @@ BUG FIXES
 	setGeneric() when that does not use a definition nor
 	explicitly set a signature.
 
+    o   The pdf() device will now allow lwd values less than 1
+        (it used to brute force such values to be 1)
 
 
 
