--- a/NEWS
+++ b/NEWS
@@ -186,7 +186,13 @@ UTILITIES
     o	There is an R-based version of R CMD check, R CMD ncheck.
 	Its check for 'Subdirectory 'inst' contains no files' is more
 	thorough: it looks for files, and warns if there are only
-	empty directories. [Work in progress.]
+	empty directories.
+
+	The format of 'check' configuration files (default
+	~/.R/check.conf) will need to change, and they are currently
+	disabled in 'ncheck'.
+
+	[Work in progress.]
 
 
 C-LEVEL FACILITIES
