--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -3371,7 +3371,7 @@ package @pkg{grDevices}.
 @chapter Tools
 
 The behavior of @command{R CMD check} can be controlled through a
-variety of command line arguments, Perl configuration variables, and
+variety of command line arguments, configuration variables, and
 internal environment variables.
 
 There is an internal @option{--install=@var{value}} command line
@@ -3397,7 +3397,7 @@ which require the package to be installed.
 @end table
 
 The following internal environment variables are used for initializing
-the corresponding public Perl configuration variables
+the corresponding public configuration variables
 (@pxref{Customizing checking and building, , Customizing checking and
 building, R-exts, Writing R Extensions}):
 
@@ -3591,15 +3591,16 @@ In addition, the following tools are needed for certain tasks.
 
 @itemize @bullet
 @item
-Perl version 5 is needed for several tools, in particular
-@command{check} and @command{build}.
+Perl version 5 is needed for a few less common tools, in particular
+@command{Rprof}.
 @findex Perl
 
-The @R{} Core Team has decided that Perl (version 5) can safely be
-assumed for building @R{} from source, building and checking add-on
-packages, and for installing add-on packages from source.  On the other
-hand, Perl cannot be assumed at all for installing @emph{binary}
-(pre-built) versions of add-on packages, or at run time.
+The @R{} Core Team decided that Perl (version 5) can safely be assumed
+for building @R{} from source, building and checking add-on packages,
+and for installing add-on packages from source.  On the other hand, Perl
+cannot be assumed at all for installing @emph{binary} (pre-built)
+versions of add-on packages, or at run time.  (As from @R{} 2.12.0 Perl
+is no longer needed for mos of these purposes.)
 
 @item
 Makeinfo version 4.7 or later is needed to build the Info files for the
