--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1591,53 +1591,56 @@ you will need to set it in the environment.
 In addition to the available command line options, @code{R CMD check}
 also allows customization by setting configuration variables in a
 configuration file, the location of which can be specified @emph{via} the
-@option{--rcfile} option and defaults to @file{$HOME/.R/check.conf}
+@option{--rcfile} option and defaults to @file{$HOME/.R/check.Rconf}
 provided that the environment variable @env{HOME} is set.
+(Note that this changed in @R{} 2.12.0: earlier versions of @R{} used
+Perl configuration files, default @file{$HOME/.R/check.Rconf}.)
 
 The following configuration variables are currently available.
 
 @table @code
-@item $R_check_use_install_log
+@item R_check_use_install_log
 If true, record the output from installing a package as part of its
 check to a log file (@file{00install.out} by default), even when running
 interactively.
 Default: true.
-@item $R_check_all_non_ISO_C
+@item R_check_all_non_ISO_C
 If true, do not ignore compiler (typically GCC) warnings about non ISO C
-code in @emph{system} headers.
+code in @emph{system} headers.  Note that this may also show additional
+ISO C++ warnings.
 Default: false.
-@item $R_check_weave_vignettes
+@item R_check_weave_vignettes
 If true, weave package vignettes in the process of checking them.
 Default: true.
-@item $R_check_latex_vignettes
-If true (and @code{$R_check_weave_vignettes} is also true),
+@item R_check_latex_vignettes
+If true (and @code{R_check_weave_vignettes} is also true),
 @command{latex} package vignettes in the process of checking them: this
 will show up @code{Sweave} source errors, including missing source
 files.  Default: true.
-@item $R_check_subdirs_nocase
+@item R_check_subdirs_nocase
 If true, check the case of directories such as @file{R} and @file{man}.
 Default: false.
-@item $R_check_subdirs_strict
+@item R_check_subdirs_strict
 Initial setting for @option{--check-subdirs}.
 Default: @samp{default} (which checks only tarballs, and checks in the
 @file{src} only if there is no @file{configure} file).
-@item $R_check_force_suggests
+@item R_check_force_suggests
 If true, give an error if suggested packages are not available.
 Default: true.
-@item $R_check_use_codetools
+@item R_check_use_codetools
 If true, make use of the @pkg{codetools} package, which provides a
 detailed analysis of visibility of objects (but may give false
 positives).
 Default: true.
-@item $R_check_Rd_contents
+@item R_check_Rd_contents
 If true, check @file{Rd} files for auto-generated content which needs editing,
 and missing argument documentation.
 Default: true.
-@item $R_check_Rd_style
+@item R_check_Rd_style
 If true, check whether @file{Rd} usage entries for S3 methods use the full
 function name rather than the appropriate @code{\method} markup.
 Default: true.
-@item $R_check_Rd_xrefs
+@item R_check_Rd_xrefs
 If true, check the cross-references in @file{.Rd} files.
 Default: true.
 @end table
@@ -1650,8 +1653,8 @@ Values @samp{1} or a string with lower-cased version @samp{"yes"} or
 For example, a configuration file containing
 
 @example
-$R_check_use_install_log = "TRUE";
-$R_check_weave_vignettes = 0;
+R_check_use_install_log <- "TRUE";
+R_check_weave_vignettes <- 0;
 @end example
 
 @noindent
