use (only) Rprof2 on Windows closer emulation of R CMD Rprof format
git-svn-id: https://svn.r-project.org/R/trunk@52198 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -193,13 +193,14 @@ UTILITIES
 	empty directories.
 
 	'check' configuration files have changed format: they are now
-	R source files, and the default file is ~/.R/check.Rconf
+	R source files, and the default file is ~/.R/check.Rconf.
 
 	[Work in progress.]
 
     o	There is a new utility R CMD Rprof2 which emulates R CMD Rprof
-	but calls utils::summaryRprof() and does not use Perl.  It is
-	intended to be a replacement in due course.
+	via utils::summaryRprof() and does not use Perl.  It is
+	intended to be a replacement in due course (it already is on
+	Windows).
 
 
 C-LEVEL FACILITIES
