bug in callNextMethod with ... argument
git-svn-id: https://svn.r-project.org/R/trunk@52201 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -269,6 +269,8 @@ BUG FIXES
     o	The pdf() device will now allow 'lwd' values less than 1
 	(it used to brute force such values to be 1).
 
+    o	A bug in callNextMethod() for some examples with "..." in the
+        arguments has been fixed.  See tests/nextWithDots.R in the source.
 
 
 
