print(x), str(x) for named empty list x
git-svn-id: https://svn.r-project.org/R/trunk@52207 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -142,6 +142,8 @@ NEW FEATURES
 	'sample.interval' and only returns in 'by.self' data for
 	functions with non-zero self times.
 
+    o	print(x) and str(x) now indicate if an empty list x is named.
+
 
 DEPRECATED & DEFUNCT
 
