more on phasing out Perl
git-svn-id: https://svn.r-project.org/R/trunk@52210 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -176,30 +176,34 @@ PACKAGE INSTALLATION
 
 UTILITIES
 
+    o	R CMD Rprof|build|check are now based on R rather than Perl
+	scripts.  The only remaining Perl scripts are the rarely used
+	R CMD Sd2Rd, install-info.pl (used only if install-info is
+	not found) and some maintainer-mode-only scripts.
+
+	[Work in progress: 'check' is currently called 'ncheck'.]
+
     o	R CMD check has a new argument --extra-arch to confine tests
 	to those needed to check an additional sub-architecture.
 
-    o	R CMD Rd2dvi makes use of tools::texi2dvi to process the
+    o	R CMD Rd2dvi makes use of tools::texi2dvi() to process the
 	package manual.
 
-    o	There is an R-based version of R CMD build.  The Perl-based
-	version is, for now, still available as R CMD obuild.
-
-	R CMD build no longer creates an INDEX file (R CMD INSTALL
+    o	R CMD build no longer creates an INDEX file (R CMD INSTALL
 	does so), and --force removes (rather than overwrites) an
 	existing INDEX file.
 
-    o	There is an R-based version of R CMD check, R CMD ncheck.
-	Its check for 'Subdirectory 'inst' contains no files' is more
-	thorough: it looks for files, and warns if there are only
-	empty directories.
+	[The Perl-based version is, for now, still available as R CMD
+	obuild.]
+
+    o	R CMD check's check for 'Subdirectory 'inst' contains no files'
+	is more thorough: it looks for files, and warns if there are
+	only empty directories.
 
 	'check' configuration files have changed format: they are now
 	R source files, and the default file is ~/.R/check.Rconf.
 
-	[Work in progress.]
-
-    o	R CMD Rprof2 now uses utils::summaryRprof() rather than Perl.
+    o	R CMD Rprof now uses utils::summaryRprof() rather than Perl.
 	It has new arguments to select one of the tables and to limit
 	the entries printed.
 
