install.packages(p) [w/o "libs"] no longer warns
git-svn-id: https://svn.r-project.org/R/trunk@52211 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -144,6 +144,10 @@ NEW FEATURES
 
     o	print(x) and str(x) now indicate if an empty list x is named.
 
+    o	install.packages() and remove.packages() no longer warn but simply
+	inform the user of the library location used, when 'lib' has not
+	been specified.
+
 
 DEPRECATED & DEFUNCT
 
