Change graphics device callback initEvent to eventHelper Add support of graphics events to X11 device
git-svn-id: https://svn.r-project.org/R/trunk@52219 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -106,7 +106,8 @@ NEW FEATURES
     o	The getGraphicsEvent() mechanism now allows multiple windows
 	to return graphics events, through the new functions
 	setGraphicsEventHandlers(), setGraphicsEventEnv(), and
-	getGraphicsEventEnv().
+	getGraphicsEventEnv().  (Currently implemented in the
+	windows() and X11() devices.)
 
     o	tools::texi2dvi() gains an 'index' argument, mainly for use by
 	R CMD Rd2pdf.
