--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1574,16 +1574,11 @@ you need @env{R_LIBS} set (to find packages in a non-standard library)
 you will need to set it in the environment.
 @end quotation
 
-@c @quotation Note to Windows users
-@c @code{R CMD check} and @code{R CMD build} need you to have installed the
-@c files for building source packages (which is the default), as well as
-@c the Windows toolset and Perl (see the ``R Installation and
-@c Administration'' manual).  You may need to set @env{TMPDIR} to point to
-@c a suitable writable directory with a path not containing spaces -- use
-@c forward slashes for the separators.  Also, the directory needs to be on
-@c a case-honouring file system (some network-mounted file systems are
-@c not).
-@c @end quotation
+@quotation Note to Windows users
+@code{R CMD check} and @code{R CMD build} require you to have installed
+the Windows toolset (see the ``R Installation and Administration''
+manual) and have it in your path.
+@end quotation
 
 @node Customizing checking and building,  , Building packages, Checking and building packages
 @subsection Customizing checking and building
