--- a/NEWS
+++ b/NEWS
@@ -120,9 +120,13 @@ BUG FIXES
 	a foreign encoding (e.g. UTF-8 strings on Windows) and so was
 	slower than it could have been on very long input strings.
 	(PR#14286)
-	
+
     o	tools::Rd2txt() did not render poorly written Rd files
 	consistently with other renderers.
+
+	It computed widths of strings that would be print()ed with
+	escapes incorrectly, for example in the computation of column
+	width for \tabular.
 
     o	na.action() did not extract the 'na.action' component as
 	documented.
