port patch for spaces & Rd2dvi from R-2-11-branch Can't have \ in libdir in R CMD check, it seems
git-svn-id: https://svn.r-project.org/R/trunk@52232 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -291,6 +291,16 @@ BUG FIXES
 	**************************************************
 
 
+		CHANGES IN R VERSION 2.11.1 patched
+
+
+BUG FIXES
+
+    o	R CMD Rd2dvi failed if run from a path with name containing
+	spaces.  This affected R CMD check, which called Rd2dvi.
+
+
+
 		CHANGES IN R VERSION 2.11.1
 
 
