--- a/NEWS
+++ b/NEWS
@@ -157,6 +157,16 @@ NEW FEATURES
     	which can be used to pass options to R CMD INSTALL for
     	source-package installs.
 
+    o	Function person() in utils now uses a given/family scheme in
+    	preference to first/middle/last, is vectorized to handle an
+    	arbitrary number of persons, and gains a 'role' argument to
+    	specify person roles using a controlled vocabulary (the MARC
+    	relator terms).
+
+    o	Package utils adds a new bibentry class for representing and
+        manipulating bibliographic information in enhanced BibTeX style,
+        unifying and enhancing the previously existing mechanisms.
+
 
 DEPRECATED & DEFUNCT
 
