--- a/doc/manual/R-intro.texi
+++ b/doc/manual/R-intro.texi
@@ -7056,13 +7056,13 @@ Post-process @R{} profiling files.
 @itemx Rd2txt
 Convert Rd format to various other formats, including @HTML{}, @LaTeX{},
 plain text, and extracting the examples.  @code{Rd2txt} can be used as
-shorthand for @code{Rd2txt -t txt}.
+shorthand for @code{Rd2conv -t txt}.
 @item Rd2dvi
 @itemx Rd2pdf
 Convert Rd format to DVI/PDF.  @code{Rd2pdf} can be used as shorthand
 for @code{Rd2dvi --pdf}.
 @item Sd2Rd
-Convert S documentation to Rd format.
+Convert S documentation to Rd format. (Deprecated, requires Perl.)
 @item Stangle
 Extract S/R code from Sweave documentation
 @item Sweave
@@ -7097,17 +7097,20 @@ to have the same environment as @R{} or the specific commands run under,
 for example to run @command{ldd} or @command{pdflatex}.  Under a
 Unix-alike, if @var{cmd} is @samp{perl} or @samp{awk} it is replaced by
 the full path to the Perl or AWK command found when @R{} was configured.
+Under Windows @var{cmd} can be an executable or a batch file, or if it
+has extension @code{.sh} or @code{.pl} the appropriate interpreter (if
+available) is called to run it.
 
 
 @node Invoking R under Windows, Invoking R under Mac OS X, Invoking R from the command line, Invoking R
 @appendixsec Invoking R under Windows
 
 There are two ways to run @R{} under Windows.  Within a terminal window
-(e.g.@ @code{cmd.exe} or @code{command.com} or a more capable shell), the
-methods described in the previous section may be used, invoking by
-@code{R.exe} or more directly by @code{Rterm.exe}.  (These are
-principally intended for batch use.)  For interactive use, there is a
-console-based GUI (@code{Rgui.exe}).
+(e.g.@ @code{cmd.exe} or a more capable shell), the methods described in
+the previous section may be used, invoking by @code{R.exe} or more
+directly by @code{Rterm.exe}.  (These are principally intended for batch
+use.)  For interactive use, there is a console-based GUI
+(@code{Rgui.exe}).
 
 The startup procedure under Windows is very similar to that under
 UNIX, but references to the `home directory' need to be clarified, as
