--- a/NEWS
+++ b/NEWS
@@ -153,10 +153,6 @@ NEW FEATURES
 	file: all of [bgx]zfile() allow streams to be appended to an
 	existing file, but bzfile() reads only the first stream.
 
-    o	install.packages() has a new optional argument 'INSTALL_opts'
-    	which can be used to pass options to R CMD INSTALL for
-    	source-package installs.
-
     o	Function person() in utils now uses a given/family scheme in
     	preference to first/middle/last, is vectorized to handle an
     	arbitrary number of persons, and gains a 'role' argument to
@@ -321,10 +317,17 @@ BUG FIXES
 		CHANGES IN R VERSION 2.11.1 patched
 
 
+NEW FEATURES
+
+    o	install.packages() has a new optional argument 'INSTALL_opts'
+    	which can be used to pass options to R CMD INSTALL for
+    	source-package installs.
+
+
 BUG FIXES
 
-    o	R CMD Rd2dvi failed if run from a path with name containing
-	spaces.  This affected R CMD check, which called Rd2dvi.
+    o	R CMD Rd2dvi failed if run from a path containing space(s).
+	This also affected R CMD check, which calls Rd2dvi.
 
 
 
