--- a/NEWS
+++ b/NEWS
@@ -175,6 +175,9 @@ NEW FEATURES
         dispatching on an S4 object.  See ?Methods, section on
         "Methods for S3 Generic Functions" for recommendations and details.
 
+    o	format.pval() gains a ... argument to pass arguments such as
+	'nsmall' to format().  (Wish of PR#9574)
+
 
 DEPRECATED & DEFUNCT
 
