use --vanilla in R CMD Sweave
git-svn-id: https://svn.r-project.org/R/trunk@52274 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -236,6 +236,9 @@ UTILITIES
 	It has new arguments to select one of the tables and to limit
 	the number of entries printed.
 
+    o	R CMD Sweave now runs R with --vanilla so the environment
+	setting of R_LIBS will always be used.
+
 
 C-LEVEL FACILITIES
 
