Add \href tag to Rd files
git-svn-id: https://svn.r-project.org/R/trunk@52277 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -167,6 +167,9 @@ NEW FEATURES
     o	Several aspects of the display of text help are now
 	customizable using the new Rd2txt_options() function.
 	options("help_text_width") is no longer used.
+	
+    o	Added \href tag to the Rd format, to allow hyperlinks to URLs
+    	without displaying the full URL.
 
     o	R_HOME/share/texmf now follows the TDS conventions, so can be
 	set as a texmf tree ('root directory' in MiKTeX parlance).
