enhancement of legend()
git-svn-id: https://svn.r-project.org/R/trunk@52278 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -181,6 +181,8 @@ NEW FEATURES
     o	format.pval() gains a ... argument to pass arguments such as
 	'nsmall' to format().  (Wish of PR#9574)
 
+    o	legend() supports 'title.adj' (Wish of PR#13415)
+
 
 DEPRECATED & DEFUNCT
 
