GERaster does nothing if width or height are zero
git-svn-id: https://svn.r-project.org/R/trunk@52280 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -318,6 +318,9 @@ BUG FIXES
     o	A bug in callNextMethod() for some examples with "..." in the
         arguments has been fixed.  See tests/nextWithDots.R in the source.
 
+    o   GERaster() now checks for width or height of zero and does
+        nothing in those cases;  previously the behaviour was
+        undefined, probably device-specific, and possibly dangerous.
 
 
 	**************************************************
